--- a/pages/specialists.html
+++ b/pages/specialists.html
@@ -8,10 +8,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">	
 		<link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../js/vendor/fancybox/jquery.fancybox.css">
 		<link rel="stylesheet" href="../css/fonts.css">
+		<link rel="stylesheet" href="../css/slick.js/slick.css">
+		<link rel="stylesheet" href="../css/slick.js/slick-theme.css">
 		<link rel="stylesheet" href="../css/css3.css">
 		<link rel="stylesheet" href="../css/main.css">
 		
@@ -20,6 +23,7 @@
 		<script src="../js/vendor/jquery-migrate-1.4.1.min.js"></script>
 		<script src="../js/vendor/jquery.form.min.js"></script>
 		<script src="../js/vendor/fancybox/jquery.fancybox.pack.js"></script>
+		<script src="../js/vendor/slick.js/slick.min.js"></script>
 		<script src="../js/main.js"></script>
 	</head>
 	
@@ -68,7 +72,7 @@
 			<!--HEADER-END-->
 
 			<section class="block-content">
-				<div class="site-wrap">
+				<div class="site-wrap specialists">
 					<div class="block-breadcrumbs">
 						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a>	/<br>		<span class="breadcrumbs-current clear-m">Наши специалисты</span>
 					</div>
@@ -84,15 +88,19 @@
 
 							<div class="specialists-filter-wrapper">
 								<form action="" class="specialists-filter-form">
-									<select name="specialization">
-									<option value="" disabled selected style='display:none;'>Специализация</option>
-									<option value="filter-specialization">Значение 1</option>
-									</select>
-									<select name="filter-clinic">
-									<option value="" disabled selected style='display:none;'>Клиника</option>
-									<option value="clinic">Значение 1</option>
-									</select>
-									<button type="submit">Применить фильтр</button>
+									<div class="select-wrapper">
+										<select class="filter-specialization" name="filter-specialization">
+											<option value="" disabled selected style='display:none;'>Специализация</option>
+											<option value="filter-specialization">Значение 1</option>
+											<option value="filter-specialization">Значение 2</option>
+										</select>
+										<select class="filter-clinic" name="filter-clinic">
+											<option value="" disabled selected style='display:none;'>Клиника</option>
+											<option value="clinic">Значение 1</option>
+											<option value="clinic">Значение 2</option>
+										</select>
+									</div>
+									<button class="filter-submit" type="submit">Применить фильтр</button>
 								</form>
 							</div>
 
@@ -103,7 +111,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist1.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Михайлова</span> Наталья Павловна</div>
+										<div class="specialist-name"><span>Михайлова</span><br> Наталья Павловна</div>
 										<div class="specialist-info">
 											<div class="position">Создатель и руководитель Авторских клиник «Реформа» by Dr. Mikhaylova, главный врач</div>
 										</div>
@@ -116,7 +124,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist2.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Руденко</span> Светлана Викторовна</div>
+										<div class="specialist-name"><span>Руденко</span><br> Светлана Викторовна</div>
 										<div class="specialist-info">
 											<div class="position">Главный врач</div>
 										</div>
@@ -129,7 +137,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist3.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Севостьянова</span> Наталья Сергеевна</div>
+										<div class="specialist-name"><span>Севостьянова</span><br> Наталья Сергеевна</div>
 										<div class="specialist-info">
 											<div class="position">Коммерческий директор</div>
 										</div>
@@ -142,7 +150,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist4.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Арутюнова</span> Татьяна Владимировна</div>
+										<div class="specialist-name"><span>Арутюнова</span><br> Татьяна Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Управляющая</div>
 										</div>
@@ -155,7 +163,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist5.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Красная</span> Юлия Владимировна</div>
+										<div class="specialist-name"><span>Красная</span><br> Юлия Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Заведующая отделением Косметологии, врач-косметолог, врач-дерматолог, кандидат медицинских наук.</div>
 											<div class="specialization">
@@ -176,7 +184,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist6.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Василенко</span> Элина Александровна</div>
+										<div class="specialist-name"><span>Василенко</span><br> Элина Александровна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматолог, врач-косметолог.</div>
 											<div class="specialization">
@@ -197,7 +205,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist7.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Гаунутдинова</span> Юлиана Игоревна</div>
+										<div class="specialist-name"><span>Гаунутдинова</span><br> Юлиана Игоревна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-косметолог, врач-дерматолог</div>
 											<div class="specialization">
@@ -218,13 +226,9 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist8.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Геворков</span> Георгий Леванович</div>
+										<div class="specialist-name"><span>Геворков</span><br> Георгий Леванович</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, челюстно-лицевой хирург, кандидат медицинских наук, врач высшей категории</div>
-											<div class="specialization">
-												<div class="specialization-title">Специализация:</div>
-												<div class="specialization-text">Оздоровление, Омоложение</div>
-											</div>
 											<div class="clinic">
 												<div class="clinic-title">Клиника:</div>
 												<div class="clinic-text">м. Новослободская </div>
@@ -239,13 +243,9 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist9.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Гербич</span> Янина Владимировна</div>
+										<div class="specialist-name"><span>Гербич</span><br> Янина Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Медицинская сестра в косметологии</div>
-											<div class="specialization">
-												<div class="specialization-title">Специализация:</div>
-												<div class="specialization-text">Оздоровление, Омоложение</div>
-											</div>
 											<div class="clinic">
 												<div class="clinic-title">Клиника:</div>
 												<div class="clinic-text">м. Новослободская </div>
@@ -260,7 +260,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist10.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Гинзбург</span> Денис Сергеевич</div>
+										<div class="specialist-name"><span>Гинзбург</span><br> Денис Сергеевич</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, эксперт anti age медицины</div>
 											<div class="specialization">
@@ -281,7 +281,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist11.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Елуферьева</span> Ольга Владимировна</div>
+										<div class="specialist-name"><span>Елуферьева</span><br> Ольга Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Подолог</div>
 											<div class="specialization">
@@ -302,7 +302,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist12.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Зеленских</span> Надежда Сергеевна</div>
+										<div class="specialist-name"><span>Зеленских</span><br> Надежда Сергеевна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-косметолог, врач-дерматовенеролог</div>
 											<div class="specialization">
@@ -323,7 +323,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist13.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Иманилов</span> Александр Петрович</div>
+										<div class="specialist-name"><span>Иманилов</span><br> Александр Петрович</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, кандидат медицинских наук</div>
 											<div class="specialization">
@@ -344,7 +344,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist14.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Киселёва</span> Арина Андреевна</div>
+										<div class="specialist-name"><span>Киселёва</span><br> Арина Андреевна</div>
 										<div class="specialist-info">
 											<div class="position">Косметолог</div>
 											<div class="specialization">
@@ -365,7 +365,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist15.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Кисель</span> Дмитрий Александрович</div>
+										<div class="specialist-name"><span>Кисель</span><br> Дмитрий Александрович</div>
 										<div class="specialist-info">
 											<div class="position">Cертифицированный пластический и реконструктивный хирург</div>
 											<div class="specialization">
@@ -386,7 +386,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist16.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Лебедев</span> Дмитрий Вячеславович</div>
+										<div class="specialist-name"><span>Лебедев</span><br> Дмитрий Вячеславович</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматовенеролог, врач-косметолог,	пластический хирург</div>
 											<div class="specialization">
@@ -407,7 +407,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist17.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Парфёнова</span> Ирина Александровна</div>
+										<div class="specialist-name"><span>Парфёнова</span><br> Ирина Александровна</div>
 										<div class="specialist-info">
 											<div class="position">Врач дерматовенеролог, врач косметолог</div>
 											<div class="clinic">
@@ -424,7 +424,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist18.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Самойлова</span> Майя Валерьевна</div>
+										<div class="specialist-name"><span>Самойлова</span><br> Майя Валерьевна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматолог, врач-косметолог</div>
 											<div class="specialization">
@@ -446,7 +446,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist19.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Соболева</span> Людмила Игоревна</div>
+										<div class="specialist-name"><span>Соболева</span><br> Людмила Игоревна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматовенеролог, врач-косметолог</div>
 											<div class="specialization">
@@ -467,7 +467,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist20.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Тихомирова</span> Елена Евгеньевна</div>
+										<div class="specialist-name"><span>Тихомирова</span><br> Елена Евгеньевна</div>
 										<div class="specialist-info">
 											<div class="position">Операционная медсестра</div>
 											<div class="specialization">
@@ -488,7 +488,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist21.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Христич</span> Людмила Анатольевна</div>
+										<div class="specialist-name"><span>Христич</span><br> Людмила Анатольевна</div>
 										<div class="specialist-info">
 											<div class="position">Массажист</div>
 											<div class="specialization">
@@ -509,7 +509,7 @@
 										<div class="specialist-foto">
 											<img src="../images/specialist22.png" width="216" height="216" alt="Специалист">
 										</div>
-										<div class="specialist-name"><span>Циркунов</span> Максим Владимирович</div>
+										<div class="specialist-name"><span>Циркунов</span><br> Максим Владимирович</div>
 										<div class="specialist-info">
 											<div class="position">Анестезиолог, реаниматолог</div>
 											<div class="specialization">
@@ -529,7 +529,7 @@
 
 					</section>
 
-						<a class="content-appointment button">Записаться на приём</a>
+					<a class="content-appointment button appointment-js" href="#show">Записаться на приём</a>
 
 						<div class="block-star">
 							<div class="star-description"><span>Звезда рекомендует:</span></div>
@@ -542,6 +542,38 @@
 						<a class="content-all-services button">Просмотреть все услуги</a>
 
 				</div>
+					<div class="block-modal-appointment" id="show">
+						<div class="modal-appointment-wrapper">
+							<div class="modal-appointment-title">Записаться на прием</div>
+							<form class="modal-appointment-form " action="">
+								<div class="form-group">
+									<input class="modal-appointment-name form-element" type="text" placeholder="Имя">
+									<input class="modal-appointment-tel form-element" type="tel" placeholder="Телефон">
+									<select class="modal-appointment-procedure form-element" name="">
+										<option value="" disabled selected style='display:none;'>Специализация</option>
+										<option value="filter-specialization">Значение 1</option>
+										<option value="filter-specialization">Значение 2</option>
+									</select>
+								</div>
+								<div class="form-group clearfix">
+									<select class="modal-appointment-date form-element" name="">
+										<option value="" disabled selected style='display:none;'>Дата</option>
+										<option value="filter-specialization">Значение 1</option>
+										<option value="filter-specialization">Значение 2</option>
+									</select>
+									<select class="modal-appointment-time form-element" name="">
+										<option value="" disabled selected style='display:none;'>Время</option>
+										<option value="filter-specialization">Значение 1</option>
+										<option value="filter-specialization">Значение 2</option>
+									</select>
+								</div>
+								<div class="form-group clearfix">
+									<div class="modal-appointment-tip"><span>*</span> - Обязательные для заполнения поля</div>
+									<button class="modal-appointment-submit" type="submit">Отправить</button>
+								</div>
+							</form>
+						</div>
+					</div>
 				<!--<div class="clear clear-footer"></div>-->
 			</section>
 
