--- a/pages/licenzies.html
+++ b/pages/licenzies.html
@@ -39,7 +39,7 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
@@ -62,9 +62,10 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active">Москва</span> / <span class="header-contacts-town">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
 								</div>
-								<div class="header-contacts-tel"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
 							</div>
 						</nav>
 					</div>
@@ -84,29 +85,43 @@
 						<h2 class="licenzies-title title">Лицензии</h2>
 
 						<div class="licenzies-items">
+
 							<h3 class="licenzies-subtitle">Лицензия на терапевтическую деятельность № ЛО-77-000943</h3>
+
 							<div class="licenzies-item">
-								<img src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
+								<a href="#lic1" class="lic1-js">
+									<img id="lic1" src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
+								</a>
 							</div>
+							
 							<div class="licenzies-item">
-								<img src="../images/lic1-back.jpg" width="279" height="397" alt="Лицензия1">
+								<a href="#lic1-back" class="licenzies-js">
+									<img id="lic1-back" src="../images/lic1-back.jpg" width="279"	height="397" alt="Лицензия1">
+								</a>
 							</div>
+
 						</div>
 
 						<div class="licenzies-items">
 							<h3 class="licenzies-subtitle">Лицензия на хирургическую деятельность № ЛО-77-003666</h3>
 							<div class="licenzies-item">
-								<img src="../images/lic2.jpg" width="279" height="397" alt="Лицензия2">
+								<a href="">
+									<img src="../images/lic2.jpg" width="279" height="397" alt="Лицензия2">
+								</a>
 							</div>
 							<div class="licenzies-item">
-								<img src="../images/lic2-back.jpg" width="279" height="397" alt="Лицензия2">
+								<a href="">
+									<img src="../images/lic2-back.jpg" width="279" height="397" alt="Лицензия2">
+								</a>
 							</div>
 						</div>
 
 						<div class="licenzies-items">
 							<h3 class="licenzies-subtitle">Лицензия № ЛО-77-01-007535</h3>
 							<div class="licenzies-item">
-								<img src="../images/lic3.jpg" width="279" height="397" alt="Лицензия3">
+								<a href="">
+									<img src="../images/lic3.jpg" width="279" height="397" alt="Лицензия3">
+								</a>
 							</div>
 						</div>
 
