--- a/pages/publics.html
+++ b/pages/publics.html
@@ -37,7 +37,7 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
@@ -60,9 +60,10 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active">Москва</span> / <span class="header-contacts-town">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
 								</div>
-								<div class="header-contacts-tel"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
 							</div>
 						</nav>
 					</div>
@@ -84,63 +85,63 @@
 							<div class="publics-item">
 								<h3 class="publics-item-title">Эстетика. На игле</h3>
 								<div class="publics-image">
-									<img src="../images/publics1.jpg" width="294" height="393" alt="Журнал">
+									<a href="#"><img src="../images/publics1.jpg" width="294" height="393" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Украшение мира</h3>
 								<div class="publics-image">
-									<img src="../images/publics2.jpg" width="294" height="404" alt="Журнал">
+									<a href="#"><img src="../images/publics2.jpg" width="294" height="404" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Интеллектуальная лазерная липосакция</h3>
 								<div class="publics-image">
-									<img src="../images/publics3.jpg" width="295" height="395" alt="Журнал">
+									<a href="#"><img src="../images/publics3.jpg" width="295" height="395" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Ger Lift</h3>
 								<div class="publics-image">
-									<img src="../images/publics4.jpg" width="294" height="382" alt="Журнал">
+									<a href="#"><img src="../images/publics4.jpg" width="294" height="382" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Курс на реформы</h3>
 								<div class="publics-image">
-									<img src="../images/publics5.jpg" width="292" height="391" alt="Журнал">
+									<a href="#"><img src="../images/publics5.jpg" width="292" height="391" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Как всегда впереди</h3>
 								<div class="publics-image">
-									<img src="../images/publics6.jpg" width="294" height="394" alt="Журнал">
+									<a href="#"><img src="../images/publics6.jpg" width="294" height="394" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">В шоколаде</h3>
 								<div class="publics-image">
-									<img src="../images/publics7.jpg" width="294" height="404" alt="Журнал">
+									<a href="#"><img src="../images/publics7.jpg" width="294" height="404" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Относитесь к себе хорошо.
 Каждый день.</h3>
 								<div class="publics-image">
-									<img src="../images/publics8.jpg" width="292" height="392" alt="Журнал">
+									<a href="#"><img src="../images/publics8.jpg" width="292" height="392" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Революционный подход 
 к вопросу совершенства</h3>
 								<div class="publics-image">
-									<img src="../images/publics9.jpg" width="293" height="395" alt="Журнал">
+									<a href="#"><img src="../images/publics9.jpg" width="293" height="395" alt="Журнал"></a>
 								</div>
 							</div>
 							<div class="publics-item">
 								<h3 class="publics-item-title">Процедура мгновенной красоты</h3>
 								<div class="publics-image">
-									<img src="../images/publics10.jpg" width="296" height="384" alt="Журнал">
+									<a href="#"><img src="../images/publics10.jpg" width="296" height="384" alt="Журнал"></a>
 								</div>
 							</div>
 						</div>
