--- a/pages/action.html
+++ b/pages/action.html
@@ -41,7 +41,7 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
@@ -64,9 +64,10 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active">Москва</span> / <span class="header-contacts-town">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
 								</div>
-								<div class="header-contacts-tel"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
 							</div>
 						</nav>
 					</div>
