--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -38,7 +38,7 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
@@ -61,9 +61,10 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active">Москва</span> / <span class="header-contacts-town">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
 								</div>
-								<div class="header-contacts-tel"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
 							</div>
 						</nav>
 					</div>
@@ -76,7 +77,7 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs specialist">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="#">О клиниках</a>	/<br>	<a class="breadcrumbs-link clear-m" href="#">Наши специалисты</a> / <br><span class="breadcrumbs-current clear-m">Михайлова Наталья Павловна</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="#">О клиниках</a>	/ <a class="breadcrumbs-link clear-m" href="#">Наши специалисты</a> / <span class="breadcrumbs-current">Михайлова Наталья Павловна</span>
 					</div>
 
 					<section class="block-specialist">
