--- a/pages/specialists.html
+++ b/pages/specialists.html
@@ -37,7 +37,7 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
@@ -60,9 +60,10 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active">Москва</span> / <span class="header-contacts-town">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
 								</div>
-								<div class="header-contacts-tel"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
+								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
 							</div>
 						</nav>
 					</div>
@@ -74,7 +75,7 @@
 			<section class="block-content">
 				<div class="site-wrap specialists">
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="#">Главная</a>	/	<a class="breadcrumbs-link" href="#">О клиниках</a>	/<br>		<span class="breadcrumbs-current clear-m">Наши специалисты</span>
+						<a class="breadcrumbs-link" href="#">Главная</a>	/	<a class="breadcrumbs-link" href="#">О клиниках</a>	/ <span class="breadcrumbs-current">Наши специалисты</span>
 					</div>
 				
 
